# bevy_baseview_plugin

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
bevy_baseview_plugin/: Cargo.toml
bevy_baseview_plugin/examples/: shapes.rs
bevy_baseview_plugin/src/: baseview_windows.rs  default_plugins.rs  keyboard.rs  lib.rs
bevy_baseview_standalone_helper/: .gitignore  Cargo.toml
bevy_baseview_standalone_helper/src/: lib.rs
examples/: shapes.rs
src/: conversions.rs  parent_win.rs
